--- a/app/templates/pages/skins/kattis/style.css
+++ b/app/templates/pages/skins/kattis/style.css
@@ -3,6 +3,11 @@
     font-size: 14px;
 }
 
+#catsscore_wrapper th {
+    text-align: center;
+    padding: 2px;
+}
+
 #catsscore_wrapper a {
     text-decoration: none;
     color: #4E92D0;
